# Learning

./: .gitignore  Commands.md  Notes.md
day1/: echo_server_ep.cpp  echo_server_t.cpp
day10/: Logic.md  Notes.md  main.cpp
day10/include/: bytecode.hpp  stack.hpp  vm.hpp
day10/src/: bytecode.cpp  vm.cpp
day11/: main.cpp
day11/include/: linarena.hpp
day12/: Note.md  main.cpp
day12/include/: movevec.hpp
day13/: main.cpp
day13/include/: smallvec.hpp
day14/: Notes.md  main.cpp
day14/include/: span.hpp
day15/: main.cpp
day15/include/: shared_ptr.hpp
day16/: main.cpp
day16/include/: thread_pool.hpp
day17/: Notes.md  avx.cpp  main.cpp  program.s
day17/simdvec/: Notes.md  main.cpp  simd_vec.hpp
day2/: main.cpp
day3/: main.cpp
day5/: main.cpp  main.h  note.md
day6/LinearAlg/: CMakeLists.txt  README.md
day6/LinearAlg/examples/: example_usage.cpp
day6/LinearAlg/include/lalib/: matrix.hpp  matrix.tpp
day6/LinearAlg/tests/: main.cpp  test_addition.cpp  test_edge_cases.cpp  test_transpose.cpp
day7/: Note.md  main.cpp
day7/include/dyn_arr/: dyn_arr.hpp  dyn_arr.tpp
day8/: Notes.md  arr_decay.cpp  const_correctness.cpp  double_pointers.cpp  function_pointer.cpp  main.cpp
day9/: Notes.md  main.cpp
day9/include/: str.hpp  str.tpp
